// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`action creators > startCreatingUser > triggers userDetailsLoaded on success 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "error/setError",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": [
      {
        "id": 1,
      },
    ],
    "type": "[USER] Loaded_Details",
  },
]
`;

exports[`action creators > startLoadingUsers > triggers usersLoaded on success 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "error/setError",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": [
      {
        "id": 1,
      },
    ],
    "type": "[USER] Loaded",
  },
]
`;

exports[`action creators > startUpdateUser > triggers userDetailsLoaded on success 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "error/setError",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": [
      {
        "id": 1,
      },
    ],
    "type": "[USER] Loaded_Details",
  },
]
`;
